@startuml

title __COMPRESION's Class Diagram__\n

  namespace Software.Compresion {
    class Software.Compresion.CompresionTest {
        {static} + main()
    }
  }
  

  namespace Software.Compresion {
    class Software.Compresion.HuffmanCompression {
        {static} ~ root : HuffmanNode
        {static} - charPrefixHashMap : Map<Character, String>
        + comprimir()
        + descomprimir()
        {static} - buildTree()
        {static} - setPrefixCodes()
    }
  }
  

  namespace Software.Compresion {
    class Software.Compresion.HuffmanCompression.HuffmanNode {
        ~ data : char
        ~ frequency : int
        + compareTo()
    }
  }
  

  namespace Software.Compresion {
    interface Software.Compresion.ICompresionStrategy {
        {abstract} + comprimir()
        {abstract} + descomprimir()
    }
  }
  

  namespace Software.Compresion {
    interface Software.Compresion.IMensaje {
        {abstract} + escribir()
        {abstract} + leer()
    }
  }
  

  namespace Software.Compresion {
    class Software.Compresion.LempelZivCompression {
        - integers : List<Integer>
        + comprimir()
        + descomprimir()
        {static} - compress()
        {static} - decompress()
        - getIntegers()
        - setIntegers()
    }
  }
  

  namespace Software.Compresion {
    class Software.Compresion.Mensaje {
        - emisor : String
        - info : String
        - receptor : String
        + Mensaje()
        + escribir()
        + leer()
    }
  }
  

  Software.Compresion.HuffmanCompression .up.|> Software.Compresion.ICompresionStrategy
  Software.Compresion.HuffmanCompression +-down- Software.Compresion.HuffmanCompression.HuffmanNode
  Software.Compresion.HuffmanCompression.HuffmanNode .up.|> java.lang.Comparable
  Software.Compresion.HuffmanCompression.HuffmanNode o-- Software.Compresion.HuffmanCompression.HuffmanNode : left
  Software.Compresion.HuffmanCompression.HuffmanNode o-- Software.Compresion.HuffmanCompression.HuffmanNode : right
  Software.Compresion.LempelZivCompression .up.|> Software.Compresion.ICompresionStrategy
  Software.Compresion.Mensaje .up.|> Software.Compresion.IMensaje
  Software.Compresion.Mensaje o-- Software.Compresion.ICompresionStrategy : compresionStrategy


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
